--- a/WeChatTweak.framework/Versions/A/Resources/Info.plist
+++ b/WeChatTweak.framework/Versions/A/Resources/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>18E226</string>
+	<string>18G87</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -27,17 +27,17 @@
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>10E1001</string>
+	<string>10G8</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>18E219</string>
+	<string>18G74</string>
 	<key>DTSDKName</key>
 	<string>macosx10.14</string>
 	<key>DTXcode</key>
-	<string>1020</string>
+	<string>1030</string>
 	<key>DTXcodeBuild</key>
-	<string>10E1001</string>
+	<string>10G8</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2017年 Sunnyyoung. All rights reserved.</string>
 </dict>
