--- a/WeChatTweak.framework/Versions/A/Resources/Info.plist
+++ b/WeChatTweak.framework/Versions/A/Resources/Info.plist
@@ -27,17 +27,19 @@
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>10G8</string>
+	<string>11A420a</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>18G74</string>
+	<string>19A547</string>
 	<key>DTSDKName</key>
-	<string>macosx10.14</string>
+	<string>macosx10.15</string>
 	<key>DTXcode</key>
-	<string>1030</string>
+	<string>1100</string>
 	<key>DTXcodeBuild</key>
-	<string>10G8</string>
+	<string>11A420a</string>
+	<key>LSMinimumSystemVersion</key>
+	<string>10.10</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2017年 Sunnyyoung. All rights reserved.</string>
 </dict>
